# algorithmus

./: .gitignore  LICENSE  README.md  conda_env.yaml  pyproject.toml
sorting/: pysorting.py  sorting.c
sorting/dep/: setup.py  sorting.pyx
