[tool.poetry]
name = "algorithmus"
version = "0.0.1"
description = "My own chest with algorithms. Python and Cython imlementations"
authors = ["Nikolay <nokolay.zh@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
cython = {git = "https://github.com/cython/cython.git", rev = "0.29.32"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
notebook = "^6.4.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
